adding allow_fullscreen_toggle

--- a/applications.html
+++ b/applications.html
@@ -124,6 +124,10 @@
                         <div class="form-inline">
                             <input type="checkbox" ng-checked="app.requires_fullscreen == 1"
                                    ng-model="app.requires_fullscreen">&nbsp;Run Full Screen
+                        </div><br/>
+                        <div class="form-inline">
+                            <input type="checkbox" ng-checked="app.allow_fullscreen_toggle == 1"
+                                   ng-model="app.allow_fullscreen_toggle">&nbsp;Show Full Screen Toggle
                         </div>
                         <div ><br/>
                             <p><b>Assign this app to a role(s).</b></p>
