fix for screen jiggle caused by anchor #

--- a/filemanager/index.html
+++ b/filemanager/index.html
@@ -93,7 +93,7 @@
 								</span>
                     </div>
                     <div class="cLeft cLM1 fmToolbarPlus3">
-                        <a id="home" href="#" class="btn btn-small fmActionButton"><i
+                        <a id="home" class="btn btn-small fmActionButton"><i
                                 class="icon-home"></i>&nbsp;Home</a>&nbsp;
                         PATH:&nbsp;<span id="breadcrumbs">/</span>
                     </div>
