removed storage_name

--- a/services.html
+++ b/services.html
@@ -149,10 +149,10 @@
         <a id="header-update" class="btn btn-inverse" ng-click="updateHeaders()"><i class="icon-plus-sign"></i>
             Add Header</a>
     </div>
-    <div class="section storage_name">
-        <p>Storage Name</p>
-        <input ng-model="service.storage_name" type="text"/>
-    </div>
+    <!--<div class="section storage_name">-->
+    <!--<p>Storage Name</p>-->
+    <!--<input ng-model="service.storage_name" type="text"/>-->
+    <!--</div>-->
     <div class="section nosql_type">
         <p>NoSQL Type</p>
         <select ng-options="option.value as option.name for option in NoSQLOptions"
