adding provider, removing notion of local vs remote email in scope

--- a/services.html
+++ b/services.html
@@ -72,7 +72,10 @@
         <select ng-init="showFields()" ng-change="showFields()" ng-model="service.type"
                 ng-options="option.name as option.name for option in serviceCreateOptions"></select>
     </div>
-
+    <div class="section" ng-show="service.type == 'Email Service'">
+        <span>Provider:</span>
+        <select ng-init ="showEmailFields()" ng-change = "showEmailFields()" ng-model="email_type" ng-options = "option.name as option.name for option in emailOptions"></select>
+    </div>
     <div class="section">
         <span>Service Name</span>
         <input ng-model="service.name" type="text"/>
