Make app desc and import url fields wider.

--- a/applications.html
+++ b/applications.html
@@ -101,7 +101,7 @@
                         </div>
                         <div>
                             <p><b>Public description on LaunchPad</b></p>
-                            <input name="app_desc" type="text" ng-model="app.description">
+                            <input name="app_desc" type="text" ng-model="app.description" style="width:75%;">
                         </div>
                         <div ng-show="app.is_url_external==0">
                             <p><b>Default Path</b></p>
