--- a/import.html
+++ b/import.html
@@ -10,7 +10,7 @@
     <div class="section">
         <h5>OR enter the URL for a .dfpkg file to import</h5>
         <form class="form-inline" id="import-url-form" name="import-url-form"  ng-controller = 'FileCtrl' action="/rest/system/app/?app_name=admin" method="POST" target="importUrlIframe">
-            <input id="urlInput" type="text" name="url" style="width:300px;"/>&nbsp;<button ng-click='importPackageUrl()' class="btn btn-primary">Import</button><br/>
+            <input id="urlInput" type="text" name="url" style="width:50%;"/>&nbsp;<button ng-click='importPackageUrl()' class="btn btn-primary">Import</button><br/>
             <div>
                 <br/>
                 <p>Sample apps on https://github.com/dreamfactorysoftware:</p>
