Wider input fields for descriptions.

--- a/groups.html
+++ b/groups.html
@@ -56,7 +56,7 @@
 						<div class="section">
 							<p>Description</p>
 
-							<input ng-model="group.description" type="text" />
+							<input ng-model="group.description" type="text" style="width:100%;"/>
 						</div>
 						<div class="section">
 							<p>Assign Apps to this group.</p>
