--- a/roles.html
+++ b/roles.html
@@ -55,7 +55,7 @@
 
                             <div class="section">
                                 <p>Description</p>
-                                <input ng-model="role.description" type="text"/>
+                                <input ng-model="role.description" type="text" style="width:100%;"/>
                             </div>
                             <div class="section">
                                 <p>Users Assigned to this Role.</p>
