--- a/services.html
+++ b/services.html
@@ -87,7 +87,7 @@
     </div>
     <div class="section">
         <span>Description:</span>
-        <input ng-model="service.description" type="text"/>
+        <input ng-model="service.description" type="text" style="width:80%;"/>
     </div>
     <div class="section base_url">
         <span>Base URL</span>
